--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="grid grid-cols-5 grid-rows-[auto_auto_auto]  grid-flow-dense divide-x divide-y divide-gray-300"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
